fix(css): dropdown overlay in select overflowing screen

--- a/src/components/MenuListBackground/MenuListBackground.style.scss
+++ b/src/components/MenuListBackground/MenuListBackground.style.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   box-shadow: var(--md-globals-elevation-4);
   outline: none;
-  max-height: 30rem;
+  max-height: 50vh;
   overflow-y: auto;
 
   &[data-color='primary'] {
